--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>tunniplaan.arti.ee</title>
+        <title>Väike-Maarja koolide tunniplaanid</title>
         <meta name="description" content="Väike-Maarja Õppekeskuse ja Gümnaasiumi tunniplaani kuvaja mis ei kasuta flash playerit">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
