väike link qr koodi pildi alla

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@ Autor: <a href="https://plus.google.com/+ArtiZirk">Arti Zirk</a> <span class="te
       </div>
       <div class="modal-body">
           <img class="img-responsive" style="margin: auto; display: block;" src="/static/img/qrcode.png"></img>
+          <a href="http://tp.arti.ee/" class="text-muted text-center" style="margin-left: 40%;">http://tp.arti.ee/</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Sulge</button>
