--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -122,7 +122,7 @@ header ul {
 }
 
 header li {
-  width:89px;
+  width:133px;
   float:left;
   border-right:1px solid #d2d2d2;
   height:40px;
@@ -142,15 +142,15 @@ strong {
   color:#222;
   font-weight:700;
 }
-
+/*
 header ul li + li {
   width:88px;
   border-left:1px solid #fff;
-}
+}*/
 
-header ul li + li + li {
+header ul li + li {
   border-right:none;
-  width:89px;
+  width:133px;
 }
 
 header ul a strong {
@@ -181,6 +181,10 @@ footer {
   float:left;
   position:fixed;
   bottom:50px;
+}
+
+p.view {
+  display:none;
 }
 
 @media print, screen and (max-width: 960px) {
@@ -243,6 +247,10 @@ footer {
   
   header ul {
     display:none;
+  }
+  
+  p.view {
+    display:block;
   }
 }
 
