--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,10 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400italic,700italic,400,700);
 
 body {
   padding:50px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
-  font-weight:300;
+  color:#444;
+  font-weight:400;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -261,3 +261,8 @@ p.view {
     color:#444;
   }
 }
+
+
+/*.gist {width:500px !important;}*/
+.gist-file
+.gist-data {max-height: 500px;}
