--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 
 <hr>
 <p>
-Autor: <a href="https://plus.google.com/+ArtiZirk">Arti Zirk</a> <span class="text-muted">|</span> Lühike aadress siia: <button class="btn btn-link" style="padding: 0; margin-top: -3px;" data-toggle="modal" data-target="#tpartieeqrcode">tp.arti.ee</button> | <a href="/archive">Arhiiv</a> | <a href="/blog">Blogi</a>
+</span> Lühike aadress siia: <button class="btn btn-link" style="padding: 0; margin-top: -3px;" data-toggle="modal" data-target="#tpartieeqrcode">tp.arti.ee</button> | <a href="/archive">Arhiiv</a> | <a href="/blog">Blogi</a> | <a href="/blog">Teave</a>
 </p>
 
 
