printimis stiili muudatus ning ka lehe kirjelduse muutmine

--- a/templates/show_tp.html
+++ b/templates/show_tp.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!--<a href="#" class="btn btn-primary" role="button">&lt;</a>-->
 
-<div class="centre">
+<div class="centre hidden-print">
   {% for x, t, l in ((names[0],"c",t_list[0]), (names[1],"t",t_list[1]), (names[2],"r",t_list[2])) %}
   <div class="btn-group">
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
