--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Väike-Maarja koolide Flashi vabad tunniplaanid</title>
-        <meta name="description" content="Väike-Maarja Õppekeskuse ja Gümnaasiumi tunniplaani kuvaja mis ei kasuta flash playerit">
+        <meta name="description" content="Väike-Maarja Õppekeskuse ja Gümnaasiumi tunniplaani kuvaja mis töötab telefonis">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
