--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -266,3 +266,8 @@ p.view {
 /*.gist {width:500px !important;}*/
 .gist-file
 .gist-data {max-height: 500px;}
+
+img {
+  box-shadow: 0px 0px 10px #888888;
+}
+
