--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 {% block content %}
 <div class="row">
     <div class="col-sm-6">
-        <h3 class="">Õppekeskus <small><a href="http://www.v-maarja.ee/vmok/Tunniplaan_42.htm">orignaal<span class="hide-on-mobl"> tunniplaan</span></a></small></h3>
+        <h3 class="">Õppekeskus <small><a href="http://www.v-maarja.ee/vmok/Tunniplaan_42.htm">originaal<span class="hide-on-mobl"> 
+tunniplaan</span></a></small></h3>
       <ul class="list-unstyled">
         {% for tp in dirs %}
         <li>
@@ -20,7 +21,8 @@
       </ul>
     </div>
     <div class="col-sm-6">
-      <h3 class="">Gümnaasium <small><a href="http://www.v-maarja.ee/vmgym/Tunnijaotusplaan_58.htm">orignaal<span class="hide-on-mobl"> tunniplaan</span></a></small></h3>
+      <h3 class="">Gümnaasium <small><a href="http://www.v-maarja.ee/vmgym/Tunnijaotusplaan_58.htm">originaal<span class="hide-on-mobl"> 
+tunniplaan</span></a></small></h3>
       <ul class="list-unstyled">
         {% for tp in vmg_dirs %}
           <li><a href="/vmg/{{ tp }}{% if last_tp_vmg != None %}/{{last_tp_vmg}}{%endif%}">{{ tp }}</a></li>
