--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row">
     <div class="col-sm-6">
-        <h3 class="">Õppekeskus <small><a href="http://www.v-maarja.ee/vmok/Tunniplaan_42.htm">originaal<span class="hide-on-mobl">
+        <h3 class="">Õppekeskus <small><a href="http://vmok.v-maarja.ee/oppetoo/tunniplaan/">originaal<span class="hide-on-mobl">
 tunniplaan</span></a></small></h3>
       <ul class="list-unstyled">
         {% for tp in dirs %}
@@ -21,7 +21,7 @@ tunniplaan</span></a></small></h3>
       </ul>
     </div>
     <div class="col-sm-6">
-      <h3 class="">Gümnaasium <small><a href="http://www.v-maarja.ee/vmgym/Tunnijaotusplaan_58.htm">originaal<span class="hide-on-mobl">
+      <h3 class="">Gümnaasium <small><a href="http://vmg.v-maarja.ee/oppetoo/tunniplaan/">originaal<span class="hide-on-mobl">
 tunniplaan</span></a></small></h3>
       <ul class="list-unstyled">
         {% for tp in vmg_dirs %}
